--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ gen-external-apklibs
 # User-specific stuff:
 
 # Sensitive or high-churn files:
+.idea
 .idea/dataSources/
 .idea/dataSources.ids
 .idea/dataSources.xml
